# LearnOpenGL

./: .gitignore  CMakeLists.txt  ReEngineMain.cpp
Common/: CMakeLists.txt
Common/CppTest/: FileReadTest.c
Common/FileSystem/: FileOperation.c  FileOperation.h
Common/Utility/: Alloc.hpp  ObjectPool.cpp  ObjectPool.hpp  Singleton.hpp
GameSystem/: CMakeLists.txt  Component.hpp  GameObject.cpp  GameObject.hpp  System.hpp  World.cpp  World.hpp
GameSystem/Components/: Component.hpp
GameSystem/Entities/: Entity.cpp  Entity.hpp  EntityPool.cpp  EntityPool.hpp
GameSystem/GameObjects/: GameObject.cpp  GameObject.hpp  GameObjectPool.cpp  GameObjectPool.hpp  Transform.cpp  Transform.hpp
GameSystem/Systems/: System.cpp
GameSystem/Systems/GameObjectSystem/: EntitySystem.cpp  EntitySystem.hpp  GameObjectSystem.cpp  GameObjectSystem.hpp
GameSystem/Systems/InputSystem/: InputSystem.hpp
GameSystem/Systems/RenderSystem/: OpenGLRenderSystem.cpp  OpenGLRenderSystem.hpp
GameSystem/Utility/LogEngine/: LogEngine.cpp  LogEngine.hpp
LearnOpenGL/01 Primer/turtorial02/: HelloTriangle.cpp  vertexShader.glsl
LearnOpenGL/01 Primer/turtorial03/: HelloShader.cpp  vertexShader.glsl
LearnOpenGL/01 Primer/turtorial04/: HelloTexture.cpp
LearnOpenGL/01 Primer/turtorial05/: HelloTransform.cpp
LearnOpenGL/01 Primer/turtorial06/: HelloCoordinate.cpp
LearnOpenGL/01 Primer/turtorial07/: HelloCamera.cpp
LearnOpenGL/03 Model/TestModel/: HelloModel.cpp
LearnOpenGL/turtorial02/: HelloTriangle.cpp
LearnOpenGL/turtorial03/: HelloShader.cpp
LearnOpenGL/turtorial04/: HelloTexture.cpp  fragmentShader.glsl
LearnOpenGL/turtorial06/: HelloCoordinate.cpp  vertexShader.glsl
OpenGLHelper/: GLCamera.hpp  GLMatrial.hpp  GLMesh.cpp  GLMesh.hpp  GLModel.cpp  GLOldMesh.hpp  GLShader.cpp  GLShader.hpp  GLShaderLoader.cpp  GLTexture.cpp  GLTexture.hpp  GLTypeUtil.hpp  GLWindow.cpp  GLWindow.hpp  MeshRenderer.cpp  MeshRenderer.hpp  OpenGLAllInOne.hpp  OpenGLHelper.hpp  OpenGLWindow.cpp  OpenGLWindow.hpp  shader.cpp  shader.hpp
libs/: CMakeLists.txt
turtorial01/: HelloWindows.cpp
turtorial02/: HelloTriangle  HelloTriangle.cpp  fragmentShader.glsl
turtorial03/: HelloShader.cpp  fragmentShader.glsl
